--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "flatpickr": "^4.6.13"
   },
   "devDependencies": {
     "css-loader": "^6.7.4",
