--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
-    "flatpickr": "^4.6.13"
+    "flatpickr": "^4.6.13",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "css-loader": "^6.7.4",
