--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
   "dependencies": {
     "axios": "^1.4.0",
     "flatpickr": "^4.6.13",
+    "leaflet": "^1.9.4",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.3",
     "css-loader": "^6.7.4",
     "html-webpack-plugin": "^5.5.1",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.0",
     "style-loader": "^3.3.3",
+    "ts-loader": "^9.4.3",
+    "typescript": "^5.1.3",
     "webpack": "^5.84.1",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0"
