--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "axios": "^1.4.0",
     "flatpickr": "^4.6.13",
     "leaflet": "^1.9.4",
-    "rxjs": "^7.8.1"
+    "postcss": "^8.4.24",
+    "rxjs": "^7.8.1",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.3",
+    "autoprefixer": "^10.4.14",
     "css-loader": "^6.7.4",
     "html-webpack-plugin": "^5.5.1",
+    "postcss-import": "^15.1.0",
+    "postcss-loader": "^7.3.3",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.0",
     "style-loader": "^3.3.3",
