--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "@types/leaflet": "^1.9.3",
     "autoprefixer": "^10.4.14",
     "css-loader": "^6.7.4",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.1",
+    "imagemin-webp-webpack-plugin": "^3.3.6",
     "postcss-import": "^15.1.0",
     "postcss-loader": "^7.3.3",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.0",
     "style-loader": "^3.3.3",
+    "terser-webpack-plugin": "^5.3.9",
     "ts-loader": "^9.4.3",
     "typescript": "^5.1.3",
+    "url-loader": "^4.1.1",
     "webpack": "^5.84.1",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0"
